--- a/index.html
+++ b/index.html
@@ -40,6 +40,68 @@
     <div>
         <div class="container border rounded" id="main"></div>
     </div>
-    <div class="footer"></div>
+    <footer>
+        <div class="container border rounded">
+            <div class="footer">
+                <div class="about-us">
+                    <div class="container">
+                        <h3>About us</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia tempore vitae mollitia nesciunt saepe cupiditate</p>
+                    </div>
+                </div>
+                <div class="recent-review">
+                    <div class="container">
+                        <h3>Recent Review</h3>
+                        <ul>
+                            <li>The Shawshank Redemption</li>
+                            <li>Avengers: Endgame</li>
+                            <li>Mirai</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="help-center">
+                    <div class="container">
+                        <h3>Help Center</h3>
+                        <ul>
+                            <li>Lorem ipsum dolor</li>
+                            <li>Sit amet consecture</li>
+                            <li>Dolorem respequem</li>
+                            <li>Invenore veritae</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="join-us">
+                    <div class="container">
+                        <h3>Join Us</h3>
+                        <ul>
+                            <li>Lorem ipsum dolor</li>
+                            <li>Sit amet consecture</li>
+                            <li>Dolorem respequem</li>
+                            <li>Invenore veritae</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="social-media">
+                    <div class='container'>
+                        <h3>Social Media</h3>
+                        <ul>
+                            <li>Facebook</li>
+                            <li>Twitter</li>
+                            <li>Google+</li>
+                            <li>Pinterest</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="newsletter">
+                    <div class="container">
+                        <h3>Newsletter</h3>
+                        <form class="subscribe-form">
+                            <input type="text" placeholder="Enter email Address">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
