--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="">
         <div class="container border rounded" id='header'>
             <div id='logo-container'>
-                <a><img src="/images/ThinkBigLogo.png" alt="TinkBigLogo"></a>
+                <a><img src="./images/ThinkBigLogo.png" alt="TinkBigLogo"></a>
             </div>
             <div class="container" >
                 <div id='nav-ul-container'>
